# cli-codepen

./: .gitignore  CLAUDE.md  CRITIC.md  MANIFEST.in  README.md  codepen-prefill  pyproject.toml
tests/: test_codepen_prefill.py
tests/fixtures/folder/: draw.js  index.html  styles.css
tests/fixtures/separate/: app.js  body.html  style.css
tests/fixtures/single/: combined.html
