[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codepen-prefill"
version = "1.0.0"
description = "Push local HTML/CSS/JS to CodePen from the command line. Parses single files, splits combined HTML, or scans project folders."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Luke Steuber", email = "coolhand@dr.eamer.dev" },
]
keywords = ["codepen", "prefill", "html", "css", "javascript", "web", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/coolhand/codepen-prefill"
Repository = "https://github.com/coolhand/codepen-prefill"
Issues = "https://github.com/coolhand/codepen-prefill/issues"

[project.scripts]
codepen-prefill = "codepen_prefill:main"

[tool.setuptools]
py-modules = ["codepen_prefill"]
